@startuml AES_Module
scale 2
!theme plain
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam defaultFontName "Microsoft YaHei"
skinparam nodesep 45
skinparam ranksep 50
caption v2.2.0 · 2026-09-07

title AES-128 CFB Encryption Module — 纯软件实现

abstract class IEncryption {
    + encrypt(input, output) : void
    + decrypt(input, output) : void
}

together {
    class AesEncryption <<adapter>> {
        - aes : Aes 「值持有,非复制」
        + AesEncryption(password)
        + encrypt(input, output) : void
        + decrypt(input, output) : void
    }
    class NullEncryption {
        + encrypt(input, output) : void 「直通」
        + decrypt(input, output) : void
    }
}

class Aes {
    - w : int[44] 「轮密钥字,构造后只读」
    - iv : uint8_t[16]
    - aesKey16Bytes : uint8_t[16]
    - buffer : DataBlock
    - cryptProvider : HCRYPTPROV 「v2.2.0 实例缓存」
    - S / S2 : const int[16][16]
    - Rcon : const uint[10]
    - GF_MUL_2/3/9/11/13/14 : uint8_t[256]
    ..
    + Aes(password)
    + ~Aes() 「SecureZeroMemory 擦除密钥与轮密钥」
    + doAes(mode, input, output)
    __ 轮函数(构造后只读) __
    - extendKey / subBytes / shiftRows / mixColumns
    - addRoundKey
    - deSubBytes / deShiftRows / deMixColumns
    __ 处理 __
    - processDataAes(input, mode) : DataBlock
    - aes(p, plen) / deAes(c, clen)
    - hashTo16Bytes(in, out)
    __ 「不可复制:持有 CSP 句柄」 __
}

IEncryption <|-- AesEncryption
IEncryption <|-- NullEncryption
AesEncryption *--> Aes

note right of Aes
  **AES-128 CFB** (流式,无分组填充)
  密文 = 16B 随机 IV + 密文体
  解密输出 = 去掉 IV 头的明文
  密钥: SHA-256(password) 截取前 16B
  并行单位是 8MB 块,块间 IV 相互独立
end note

note left of AesEncryption
  v2.2.0 性能修复:
  CSP 句柄(CryptAcquireContext)缓存进实例,
  仅首次获取、析构释放——原每次 encrypt
  都获取/释放,重 RPC 且多线程争抢
end note

@enduml
